[package]
name = "backend"
version = "0.1.0"
edition = "2021"


[dependencies]
async-graphql = "7.0.3"
async-graphql-axum = "7.0.3"
axum = "0.7.5"
sqlx = { version = "0.7.4", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4.37", features = ["serde"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-chrono"] }
dotenvy = "0.15.7"
async-trait = "0.1.78"

[dev-dependencies]
# For pre-commit
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test", "run-cargo-clippy"] }

